moved hamburger added map pin

--- a/app/css/main.scss
+++ b/app/css/main.scss
@@ -110,10 +110,10 @@ ul {
 #mobilemenubtn {
     display: none;
     position: absolute;
-    top: 2px;
-    right: 6px;
-    height: 44px;
-    width: 44px;
+    top: 0;
+    right: 0;
+    height: 54px;
+    width: 54px;
     padding: 0;
     background: none;
     border: none;
