misc lighthouse adjustments

--- a/app/css/main.scss
+++ b/app/css/main.scss
@@ -393,7 +393,8 @@ ul {
     height: 200px;*/
     display: flex;
     padding: 10px;
-    background: #aac3af;
+    // background: #aac3af;
+    background: #90b197;
     color: #fffaef;
     text-align: center
 }
@@ -412,7 +413,8 @@ ul {
 }
 
 .offer.small {
-    background-color: #d3bfa0
+    // background-color: #d3bfa0;
+    background: #d2b891;
 }
 
 .page-template-page-sthlm-php .offer.big {
